Add concurrent module